First pass at location support. * IPv6 location prefixes require the IPv6 (fefe) patch be applied to djbdns
